Opens modules that could make fail on Windows and JDK 17 test (#17036)
Opens the IO modules in Gradle test task to let the 7.17 tested without IO access errors on Windows OS.